--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ h1 {
     border-radius: 25px;
     position: absolute;
     left: -4px;
+    top: -1px;
 }
 
 .filter i {
@@ -193,6 +194,24 @@ h1 {
 .filter_text {
     padding-left: 60px;
     padding-right: 15px;
+}
+
+/*filtres : changement apparence au survol */
+
+.filter_link:hover i {
+    color: #DEEBFF;
+}
+
+.filter_link:hover .filter_icon_plus {
+    background-color:#0065FC;
+}
+
+.filter_link:hover .filter {
+    border-color: #0065FC;
+}
+
+.filter_link:hover .filter_text {
+    color: #0065FC;
 }
 
 /* info nombre de logements dispo */
