--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,20 @@ i {
     color: #0065FC;
 }
 
+.grey_star {
+    color: #cccccc;
+}
+
 em {
     font-style: normal;
 }
 
 .price {
     font-weight: bold;
+}
+
+h2 {
+    font-size: 1.4em;
 }
 
 h4 {
@@ -133,7 +141,8 @@ h1 {
     color: white;
     font-family: "Raleway", sans-serif;
     font-size: 1em;
-    font-weight: bold;   
+    font-weight: bold;  
+    cursor: pointer; 
 }
 
 #search_field {
@@ -147,6 +156,10 @@ h1 {
     font-family: "Raleway", sans-serif;
     font-size: 1em;
     font-weight: bold;
+}
+
+#search_field:focus {
+    outline: none;
 }
 
 #locate {
@@ -181,7 +194,7 @@ h1 {
     border-radius: 25px;
     position: absolute;
     left: -4px;
-    top: -1px;
+    top: -1.5px;
 }
 
 .filter i {
@@ -265,18 +278,24 @@ h1 {
 
 #accomodation_results, aside {
     border-radius: 17px;
-    padding: 20px 40px 20px 40px;
+}
+
+#accomodation_results h2 {
+    margin-left: 40px;
 }
 
 /* Résultats recherche */ 
 
 #accomodation_results {
     margin-right: 40px;
+    margin-bottom: 40px;
+    max-width: 880px;
 }
 
 #six_first_accomodation_results {
     display: flex;
     flex-wrap: wrap;
+    justify-content:space-evenly;
 }
 
 .accomodation {
@@ -284,11 +303,8 @@ h1 {
     height: 190px;
     border: 5px solid white;
     border-radius: 17px;
-    /* à supprimer si pas utile
-    display: flex;
-    flex-direction: column;
-    justify-content:flex-end;
-    */
+    box-shadow: 1px 2px 5px #cccccc;
+    margin-bottom: 30px;
 }
 
 .accomodation h4, .accomodation p {
@@ -304,14 +320,14 @@ h1 {
 #accomodation_cannebiere {
     background: url(../images/accomodations/cannebiere.jpg) center;
     background-size: contain;
-    background-position: top;
+    background-position: 0px -1px;
     position: relative;
 }
 
 #accomodation_port {
     background: url(../images/accomodations/port.jpg) center;
     background-size: contain;
-    background-position: initial;
+    background-position: 0px -1px;
     position: relative;
 }
 
@@ -347,11 +363,28 @@ h1 {
     background-color: white;
     position: absolute;
     top: 134px;
-    width: 225px;
+    left: -2px;
+    width: 229px;
     padding-left: 10px;
     padding-top: 5px;
     border-radius: 0px 0px 10px 10px;
 }    
+
+#show_more_button {
+    padding: 0px;
+    margin: 0px;
+    background-color: #F2F2F2;
+    color: black;
+    border: none;
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+    font-size: 0.9em;
+    margin-left: 40px;
+}
+
+#show_more_button:hover {
+    cursor: pointer;
+}
 
 /* les plus populaires */ 
 
