--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Police personnalisée */ 
+/************ Police personnalisée ****************/ 
 
 @font-face {
     font-family: "Raleway";
@@ -6,17 +6,17 @@
     url(../polices/Raleway/static/Raleway-Medium.ttf) format("truetype");
 }
 
-/* Éléments principaux de la page */
+/********* Styles réccurents sur la page *********/
 
 body {
     font-family: "Raleway", sans-serif;
     color: black;
-    max-width: 1340px;
-    margin: auto;
+    margin: 0px;
 }
 
-footer {
-    max-width: 1440px;
+#page_except_footer {
+    max-width: 1340px;
+    margin: auto;
 }
 
 footer, #accomodation_results, aside {
@@ -66,7 +66,7 @@ h4 {
 }
 
 
-/* Header */ 
+/******************** Header **********************/ 
 
 header {
     display:flex;
@@ -115,7 +115,7 @@ header span {
     cursor: pointer;
 }
 
-/* Éléments de la section search */
+/************** Section de recherche **************/
 
 h1 {
     font-size: 1.5em;
@@ -202,19 +202,19 @@ h1 {
     position: absolute;
 }
 
-#bill {
+.fa-money-bill-wave {
     top: 15px;
     left: 13px;
 }
-#child {
+.fa-child {
     top: 15px;
     left: 17px;
 }
-#heart {
+.fa-heart {
     top: 16px;
     left: 15px;
 }
-#dog {
+.fa-dog {
     top: 14px;
     left: 15px;
 }
@@ -269,7 +269,7 @@ h1 {
     font-size: 0.9em;
 }
 
-/* Section hébergements */
+/********* Section hébergements, global **********/
 
 #accomodations {
     display: flex;
@@ -295,7 +295,7 @@ h1 {
     padding-top: 1px;
 }
 
-/* Résultats recherche */ 
+/************* Résultats recherche ***************/ 
 
 #six_first_accomodation_results {
     display: flex;
@@ -378,14 +378,14 @@ h1 {
     border: none;
     font-family: "Raleway", sans-serif;
     font-weight: bold;
-    font-size: 0.9em;
+    font-size: 1em;
 }
 
 #show_more_button:hover {
     cursor: pointer;
 }
 
-/* les plus populaires */ 
+/************** les plus populaires ***************/ 
 
 #most_popular_title {
     display: flex;
@@ -460,13 +460,14 @@ h1 {
     margin-top: 37px;
 }
 
-/* Secion activités */
+/*************** Section activités ****************/
 
 #entertainment_results {
     display: flex;
     justify-content: space-between;
 }
 
+/* colonne à deux activités*/
 #entertainment_results div {
     display: flex;
     flex-direction: column;
@@ -545,6 +546,29 @@ h1 {
     height: 195px;
 }
 
+/******************** Footer *********************/
+
+footer {
+    width: 100%;
+    display: flex;
+}
+
+footer ul {
+    padding-left: 0px;
+    margin-left: 0px;
+}
+
+footer div:first-child {
+    margin-left: 83px;
+}
+
+footer div:nth-child(2), footer div:nth-child(3) {
+    margin-left: 230px;
+} 
+
+footer li {
+    padding-bottom: 8px;
+}
 
 
 
