--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ header {
     display:flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin-top: 36px;
+    margin-top: 40px;
 }
 
 #actions {
@@ -118,14 +118,14 @@ header span {
 /************** Section de recherche **************/
 
 h1 {
-    font-size: 1.5em;
-    margin-top: 20px;
+    font-size: 1.4em;
+    margin-top: 30px;
 }
 
 #subtitle {
     line-height: 0.6em;
+    padding-bottom: 10px;
 }
-
 
 #search_bar {
     display: flex;
@@ -133,7 +133,7 @@ h1 {
 }
 
 #search_button {
-    height: 53px;
+    height: 50px;
     width: 133px;
     background-color: #0065FC;
     border: 1px solid #0065FC;
@@ -146,7 +146,7 @@ h1 {
 }
 
 #search_field {
-    height: 50px;
+    height: 47px;
     min-width: 200px;
     padding: 0px 10px 0px 10px;
     border-top:2px solid #F2F2F2;
@@ -163,7 +163,7 @@ h1 {
 }
 
 #locate {
-    padding: 14.5px 20px 14.5px 20px;
+    padding: 13px 20px 13px 20px;
     background-color: #F2F2F2;
     border: 2px solid #F2F2F2;
     border-radius: 16px 0px 0px 16px;
@@ -221,7 +221,7 @@ h1 {
 
 .filter_text {
     padding-left: 60px;
-    padding-right: 15px;
+    padding-right: 20px;
 }
 
 /*filtres : changement apparence au survol */
@@ -247,6 +247,8 @@ h1 {
 #info  {
     display: flex;
     align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #text_info {
@@ -275,6 +277,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     height: 625px;
+    margin-bottom: 60px;
 }
 
 #accomodation_results, aside {
@@ -312,8 +315,13 @@ h1 {
     margin-bottom: 30px;
 }
 
-.accomodation h4, .accomodation p, .acc_white_background div {
-    margin-top: 0px;
+.accomodation p, .acc_white_background div {
+    margin-top: 3px;
+    margin-bottom: 0px;
+}
+
+.accomodation h4 {
+    margin-top: 7px;
     margin-bottom: 0px;
 }
 
@@ -362,11 +370,11 @@ h1 {
 .acc_white_background {
     background-color: white;
     position: absolute;
-    top: 134px;
+    top: 115px;
     left: -2px;
     width: 229px;
+    height: 75px;
     padding-left: 10px;
-    padding-top: 5px;
     border-radius: 0px 0px 10px 10px;
 }    
 
@@ -447,7 +455,7 @@ h1 {
 }
 
 .popular h4 {
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 0px;
 }
 
@@ -457,7 +465,7 @@ h1 {
 }
 
 .pop_white_background div {
-    margin-top: 37px;
+    margin-top: 35px;
 }
 
 /*************** Section activités ****************/
@@ -468,6 +476,11 @@ h1 {
 }
 
 /* colonne à deux activités*/
+
+#entertainments {
+    margin-bottom: 60px;
+}
+
 #entertainment_results div {
     display: flex;
     flex-direction: column;
@@ -551,6 +564,7 @@ h1 {
 footer {
     width: 100%;
     display: flex;
+    padding: 30px 0px 30px 0px;
 }
 
 footer ul {
