--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     font-family: "Raleway", sans-serif;
     color: black;
     margin: 0px;
+    padding: 0px 10px 0px 10px;
 }
 
 #page_except_footer {
@@ -72,6 +73,7 @@ header {
     display:flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
     margin-top: 40px;
 }
 
@@ -174,11 +176,13 @@ h1 {
 #filters {
     display: flex;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 18px;
+    flex-wrap: wrap;
 }
 
 .filter {
     margin-left: 24px;
+    margin-top: 12px;
     display: flex;
     align-items: center;
     border: 2px solid #cccccc;
@@ -248,7 +252,7 @@ h1 {
     display: flex;
     align-items: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 #text_info {
@@ -276,13 +280,15 @@ h1 {
 #accomodations {
     display: flex;
     justify-content: space-between;
-    height: 625px;
+    flex-wrap: wrap;
+    min-height: 625px; 
     margin-bottom: 60px;
 }
 
 #accomodation_results, aside {
     border-radius: 17px;
     padding-top: 20px;
+    margin-top: 20px;
 }
 
 #accomodation_results {
@@ -370,7 +376,7 @@ h1 {
 .acc_white_background {
     background-color: white;
     position: absolute;
-    top: 115px;
+    top: 116px;
     left: -2px;
     width: 229px;
     height: 75px;
@@ -380,7 +386,7 @@ h1 {
 
 #show_more_button {
     padding-top: 20px;
-    margin: 0px 0px 0px 40px;
+    margin: 0px 0px 20px 40px;
     background-color: #F2F2F2;
     color: black;
     border: none;
@@ -448,8 +454,8 @@ h1 {
     padding-top: 5px;
     border-radius: 0px 10px 10px 0px;
     position: absolute;
-    top: 0px;
-    left: 127px;
+    top: -1px;
+    left: 128px;
     width: 188px;
     height: 133px;
 }
@@ -473,18 +479,22 @@ h1 {
 #entertainment_results {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
-
-/* colonne à deux activités*/
 
 #entertainments {
     margin-bottom: 60px;
 }
 
+/* colonne à deux activités*/
 #entertainment_results div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+#entertainments h2 {
+    margin-bottom: 0px;
 }
 
 .entertainment {
@@ -492,6 +502,7 @@ h1 {
     border-radius: 17px;
     box-shadow: 1px 2px 5px #cccccc;
     position: relative;
+    margin-top: 20px;
 }
 
 .entertainment h4 {
@@ -507,15 +518,15 @@ h1 {
 }
 
 #entertain_fort h4 {
-    top: 158.5px;
+    top: 160px;
 }
 
 #entertain_frioul h4 {
-    top: 89px;
+    top: 91px;
 }
 
 #entertain_garde h4, #entertain_longchamp h4 {
-    top: 119.5px;
+    top: 121px;
 }
 
 #entertain_port {
@@ -563,22 +574,25 @@ h1 {
 
 footer {
     width: 100%;
-    display: flex;
     padding: 30px 0px 30px 0px;
+}
+
+#footer_content {
+    max-width: 1350px;
+    padding-left: 10px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#footer_content div {
+    width: 430px;
 }
 
 footer ul {
     padding-left: 0px;
     margin-left: 0px;
 }
-
-footer div:first-child {
-    margin-left: 83px;
-}
-
-footer div:nth-child(2), footer div:nth-child(3) {
-    margin-left: 230px;
-} 
 
 footer li {
     padding-bottom: 8px;
