--- a/css/style.css
+++ b/css/style.css
@@ -312,16 +312,7 @@ h1 {
     justify-content:space-evenly;
 }
 
-.accomodation {
-    width: 235px;
-    height: 190px;
-    border: 5px solid white;
-    border-radius: 17px;
-    box-shadow: 1px 2px 5px #cccccc;
-    margin-bottom: 30px;
-}
-
-.accomodation p, .acc_white_background div {
+.accomodation p, .a.accomodation_content div {
     margin-top: 3px;
     margin-bottom: 0px;
 }
@@ -331,58 +322,50 @@ h1 {
     margin-bottom: 0px;
 }
 
-#accomodation_cannebiere {
-    background-image: url(../images/accomodations/cannebiere.jpg);
-    background-size: contain;
-    background-position: 0px -1px;
+.accomodation {
+    width: 235px;
+    height: 190px;
+    border: 5px solid white;
+    border-radius: 17px;
+    box-shadow: 1px 2px 5px #cccccc;
+    margin-bottom: 30px;
     position: relative;
+    overflow: hidden;
 }
 
-#accomodation_port {
-    background-image: url(../images/accomodations/port.jpg);
-    background-size: contain;
-    background-position: 0px -1px;
-    position: relative;
-}
-
-#accomodation_mouettes {
-    background-image: url(../images/accomodations/mouettes.jpg);
-    background-size:contain; 
-    background-position: initial;
-    position: relative;
-}
-
-#accomodation_mer {
-    background-image: url(../images/accomodations/mer.jpg);
-    background-size: cover;
-    background-position: bottom;
-    position: relative;
-}
-
-#accomodation_panier {
-    background-image: url(../images/accomodations/panier.jpg);
-    background-size: contain;
-    background-position: top;
-    position: relative;
-}
-
-#accomodation_amina {
-    background-image: url(../images/accomodations/amina.jpg);
-    background-size: cover;
-    background-position: 0px -95px;
-    position: relative;
-}
-
-.acc_white_background {
+.accomodation_content {
     background-color: white;
     position: absolute;
-    top: 116px;
+    top: 118px;
     left: -2px;
-    width: 229px;
+    width: 231px;
     height: 75px;
     padding-left: 10px;
     border-radius: 0px 0px 10px 10px;
-}    
+}  
+
+.accomodation img {
+    border-radius: 17px 17px 0px 0px;
+    max-width: 100%;
+    position: absolute;
+    top: -20px;
+}
+
+#accomodation_cannebiere img, #accomodation_port img, #accomodation_mouettes img {
+    top: -17px;
+}
+
+#accomodation_mer img {
+    top: -50px;
+}
+
+#accomodation_panier img {
+    top: -5px;
+}
+
+#accomodation_amina img {
+    top: -114px;
+}
 
 #show_more_button {
     padding-top: 20px;
@@ -408,14 +391,14 @@ h1 {
     margin: 0px 40px 0px 40px;
 }
 
-#most_popular_title h3, .fa-chart-line {
-    font-size: 1.4em;
-}
-
 #three_first_popular {
     display: flex;
     flex-direction: column;
     margin: 0px 40px 0px 40px;
+}
+
+#most_popular_title h3, .fa-chart-line {
+    font-size: 1.4em;
 }
 
 .popular {
@@ -425,30 +408,11 @@ h1 {
     border-radius: 17px;
     box-shadow: 1px 2px 5px #cccccc;
     margin-bottom: 30px;
-}
-
-#pop_soleil {
-    background-image: url(../images/accomodations/soleil_matin.jpg);
     position: relative;
-    background-size: contain;
-    background-position: -37px 1px;
+    overflow: hidden;
 }
 
-#pop_coeur {
-    background-image: url(../images/accomodations/coeur_eau.jpg);
-    position: relative;
-    background-size: contain;
-    background-position: -23px -1px;
-}
-
-#pop_bleu {
-    background-image: url(../images/accomodations/bleu_blanc.jpg);
-    position: relative;
-    background-size:133px;
-    background-position: -1px -30px;
-}
-
-.pop_white_background {
+.popular_content {
     background-color: white;
     padding-left: 20px;
     padding-top: 5px;
@@ -457,7 +421,7 @@ h1 {
     top: -1px;
     left: 128px;
     width: 188px;
-    height: 133px;
+    height: 136px;
 }
 
 .popular h4 {
@@ -472,6 +436,26 @@ h1 {
 
 .pop_white_background div {
     margin-top: 35px;
+}
+
+.popular img {
+    position: absolute;
+    border-radius: 17px 0px 0px 17px;
+}
+
+#pop_soleil img {
+    max-height: 100%;
+    left: -35px;
+}
+
+#pop_coeur img {
+    max-height: 100%;
+    left: -22px;
+}
+
+#pop_bleu img {
+    width: 40%;
+    top: -40px;
 }
 
 /*************** Section activités ****************/
@@ -503,6 +487,7 @@ h1 {
     box-shadow: 1px 2px 5px #cccccc;
     position: relative;
     margin-top: 20px;
+    overflow: hidden;
 }
 
 .entertainment h4 {
@@ -510,6 +495,12 @@ h1 {
     padding: 18px 0px 18px 20px;
     width: 280px;
     border-radius: 0px 0px 17px 17px;
+    position: absolute;
+}
+
+/* position du texte par rapport à la carte*/
+
+.entertainment img {
     position: absolute;
 }
 
@@ -529,47 +520,62 @@ h1 {
     top: 121px;
 }
 
+/* taille et position des images*/
+
+
+
 #entertain_port {
-    background-image: url(../images/entertainments/port.jpg);
-    background-position: -220px 0px;
     height: 445px;
+}
+
+#entertain_port img {
+    max-height: 100%;
+    left: -190px;
 }
 
 #entertain_fort {
-    background-image: url(../images/entertainments/fort_m.jpg);
-    background-size: cover;
-    background-position: 0px -100px;
     height: 235px;
 }
 
+#entertain_fort img {
+    max-width: 100%;
+    top: -100px;
+}
+
 #entertain_frioul {
-    background-image: url(../images/entertainments/frioul.jpg);
-    background-size: cover;
-    background-position: 0px -15px;
     height: 165px;
 }
 
+#entertain_frioul img {
+    max-width: 100%;
+    top: -15px;
+}
+
 #entertain_calanques {
-    background-image: url(../images/entertainments/calanques_m_corrigee.jpg);
-    background-size: cover;
-    background-position: -190px 0px;
     height: 445px;
 }
 
+#entertain_calanques img {
+    max-height: 100%;
+    left: -190px;
+}
+
 #entertain_garde {
-    background-image: url(../images/entertainments/garde.jpg);
-    background-size: cover;
-    background-position: 0px 0px;
     height: 195px;
+}
+
+#entertain_garde img{
+    max-width: 100%;
 }
 
 #entertain_longchamp {
-    background-image: url(../images/entertainments/longchamp.jpg);
-    background-size: cover;
-    background-position: 0px -20px;
     height: 195px;
 }
 
+#entertain_longchamp img {
+    max-width: 100%;
+    top: -20px;
+}
 /******************** Footer *********************/
 
 footer {
