--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,8 @@ h1 {
     width: 133px;
     background-color: #0065FC;
     border: 1px solid #0065FC;
+    -moz-border-radius: 0px 16px 16px 0px;
+    -webkit-border-radius: 0px 16px 16px 0px;
     border-radius: 0px 16px 16px 0px;
     color: white;
     font-family: "Raleway", sans-serif;
@@ -170,6 +172,8 @@ h1 {
     padding: 14px 20px 14px 20px;
     background-color: #F2F2F2;
     border: 2px solid #F2F2F2;
+    -moz-border-radius: 16px 0px 0px 16px;
+    -webkit-border-radius: 16px 0px 0px 16px;
     border-radius: 16px 0px 0px 16px;
 }
 
@@ -196,6 +200,8 @@ h1 {
     display: flex;
     align-items: center;
     border: 2px solid #cccccc;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
     border-radius: 25px;
     height: 47px;
     position: relative;
@@ -206,6 +212,8 @@ h1 {
     color: #0065FC;
     height: 50px;
     width: 50px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
     border-radius: 25px;
     position: absolute;
     left: -4px;
@@ -273,6 +281,8 @@ h1 {
     height: 23px;
     width: 23px;
     border: 2px solid #F2F2F2;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
     border-radius: 25px;
     position: relative;
 }
@@ -296,6 +306,8 @@ h1 {
 }
 
 #accomodation_results, aside {
+    -moz-border-radius: 17px;
+    -webkit-border-radius: 17px;
     border-radius: 17px;
     padding-top: 20px;
     margin-top: 20px;
@@ -331,7 +343,11 @@ h1 {
     width: 235px;
     height: 190px;
     border: 5px solid white;
+    -moz-border-radius: 17px;
+    -webkit-border-radius: 17px;
     border-radius: 17px;
+    -moz-box-shadow: 1px 2px 5px #cccccc;
+    -webkit-box-shadow: 1px 2px 5px #cccccc;
     box-shadow: 1px 2px 5px #cccccc;
     margin-bottom: 30px;
     position: relative;
@@ -346,6 +362,8 @@ h1 {
     width: 231px;
     height: 75px;
     padding-left: 10px;
+    -moz-border-radius: 0px 0px 10px 10px;
+    -webkit-border-radius: 0px 0px 10px 10px;
     border-radius: 0px 0px 10px 10px;
 }  
 
@@ -360,6 +378,8 @@ h1 {
 }
 
 #accomodation_results article img {
+    -moz-border-radius: 17px 17px 0px 0px;
+    -webkit-border-radius: 17px 17px 0px 0px;
     border-radius: 17px 17px 0px 0px;
     max-width: 100%;
     position: absolute;
@@ -419,7 +439,11 @@ aside article {
     width: 335px;
     height: 135px;
     border: 5px solid white;
+    -moz-border-radius: 17px;
+    -webkit-border-radius: 17px;
     border-radius: 17px;
+    -moz-box-shadow: 1px 2px 5px #cccccc;
+    -webkit-box-shadow: 1px 2px 5px #cccccc;
     box-shadow: 1px 2px 5px #cccccc;
     margin-bottom: 30px;
     position: relative;
@@ -430,6 +454,8 @@ aside article {
     background-color: white;
     padding-left: 20px;
     padding-top: 5px;
+    -moz-border-radius: 0px 10px 10px 0px;
+    -webkit-border-radius: 0px 10px 10px 0px;
     border-radius: 0px 10px 10px 0px;
     position: absolute;
     top: -1px;
@@ -454,6 +480,8 @@ aside article p {
 
 aside article img {
     position: absolute;
+    -moz-border-radius: 17px 0px 0px 17px;
+    -webkit-border-radius: 17px 0px 0px 17px;
     border-radius: 17px 0px 0px 17px;
 }
 
@@ -497,7 +525,11 @@ aside article img {
 
 #entertainments article {
     width: 300px;
+    -moz-border-radius: 17px;
+    -webkit-border-radius: 17px;
     border-radius: 17px;
+    -moz-box-shadow: 1px 2px 5px #cccccc;
+    -webkit-box-shadow: 1px 2px 5px #cccccc;
     box-shadow: 1px 2px 5px #cccccc;
     position: relative;
     margin-top: 20px;
@@ -508,6 +540,8 @@ aside article img {
     background-color: white;
     padding: 18px 0px 18px 20px;
     width: 280px;
+    -moz-border-radius: 0px 0px 17px 17px;
+    -webkit-border-radius: 0px 0px 17px 17px;
     border-radius: 0px 0px 17px 17px;
     position: absolute;
 }
